--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-    <title>Tropicália</title>
+    <title>Beatles</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.3/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.11.3/font/bootstrap-icons.min.css">
     <link rel="stylesheet" href="styles.css">
@@ -15,7 +15,7 @@
     <header class=" p-5">
 
         <nav class="container d-flex justify-content-between align-items-center" >
-            <img src="img/logo.png" class="nav-img " loading="lazy">
+           
             <ul class="nav mt-5">
                 <li class="nav-item"><a class="nav-link" href="#inicio">Início</a></li>
                 <li class="nav-item"><a class="nav-link" href="#galeria">Galeria</a></li>
@@ -82,10 +82,12 @@
                 <div class="row mt-4  justify-content-md-center">
                     <div class="col-md-4">
                         <img src="b3.jpg" class="img-fluid rounded-5" loading="lazy">
+                        <p>Os Beatles antes de cruzar a Abbey Road, 1969 foto dos Beatles John Lennon, Paul Mccartney, George Harrison e Ringo Starr. </p>
                     </div>
                     <div class="col-md-4">
                         <img src="b4.jpg"
                             class="img-fluid rounded-5" loading="lazy">
+                            
                     </div>
                 </div>
              </div>
@@ -132,4 +134,4 @@
   
 </body>
 
-</html>*
+</html>
