--- a/index.html
+++ b/index.html
@@ -87,7 +87,11 @@
                     <div class="col-md-4">
                         <img src="b4.jpg"
                             class="img-fluid rounded-5" loading="lazy">
-                            
+                            <p>A rede de televisão americana NBC levará a história dos Beatles para a tela pequena em uma minissérie de oito capítulos.
+
+                                A série ainda está em seus estágios iniciais de desenvolvimento, mas já é conhecida por ser escrita pelo criador dos Tudors, Michael Hirst. Além disso, será produzido por Ben Silverman e Teri Weinberg, que já trabalharam com Hirst em outras ficções televisivas.
+                                
+                                A história do quarteto de Liverpool inspirou vários filmes, desde a recriação dos primeiros passos de John Lennon de Nowhere Boy (2009) até uma história sobre o empresário da banda, Brian Epstein, atualmente em produção.</p>
                     </div>
                 </div>
              </div>
